--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,8 @@ InitTestScene*.unity*
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
 *.prefab
+*.meta
+Assets/Prefab/BT_DayData.prefab.meta
+Assets/Prefab/BT_DayData.prefab.meta
+/Assets/Prefab
+Assets/Prefab/BT_DayData.prefab.meta
